2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-country.c:
	* clock-location-tile.c:
	* clock-location.c:
	* clock-zoneinfo.c: don't use libgnome/gnome-i18n.h, but glib/gi18n.h

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: (clock_map_init): init some fields
	(clock_map_refresh): be a bit more clever about what we do. Do nothing
	if we have no space allocated. Only reload the map if the allocation
	changed.
	(clock_map_expose): add a warning for a case that should never happen
	(clock_map_size_allocate): simplify. The stock map will be loaded at
	the beginning because of an allocation anyway.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (update_calendar_popup): no need to call clock_map_refresh()
	here: it will be done on expose event and on ClockMap size allocation
	anyway. Saves ~0.06s.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-face.c: (clock_face_finalize): do not try to get the size of
	the cache if there's no cache. Can happen if the faces are destroyed
	before being shown.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	* clock-location-tile.c: (clock_location_tile_fill): actually, we don't
	have to call can_set_system_timezone() here since the button label is
	dynamically set on EnterNotify anyway. Again, save some time quite
	easiliy.

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	Do not load the image when the object is created. Only load it once we
	actually have a useful allocation to display it. Else, we were loading
	it twice on the calendar popup: once on object creation, and once when
	the real size request happened (which was broken too, since it should
	have been size allocation...). So we can save again between 0.01s and
	0.02s per different face.

	* clock-face.c: remove old commented out code that will never be used
	in the clock applet
	(clock_face_class_init): we have a size_allocate function now
	(clock_face_init): update
	(clock_face_size_request): rewrite to just request a size, and do