@@ -2386,7 +2386,7 @@ South</property>
 	  <property name="spacing">6</property>
 
 	  <child>
-	    <widget class="GtkScrolledWindow" id="scrolledwindow13">
+	    <widget class="GtkScrolledWindow" id="find-location-scroll">
 	      <property name="visible">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
